--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -1,134 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="en" ns="https://en.steakgrill.cz">
-  <h id="wine_list" author="Internet Guru" ctime="2018-03-28">Wine List</h>
-  <desc>The wine list is tailored for our restaurant by a leading Czech specialist. Acceptable pricing is a main criterion in addition to the dishes on offer. We offer French, Italian and Czech wines.</desc>
+<body xml:lang="cs" ns="https://www.steakgrill.cz">
+  <h id="vinny_listek" author="InternetGuru" ctime="2018-03-28">Vinný lístek</h>
+  <desc class="noprint">Vinný lístek sestavuje přední český specialista přímo na míru naší restauraci. Hlavním kritériem volby je vedle nabídky jídel také přijatelná cena. Vína nabízíme francouzská, italská a česká.</desc>
   <section class="contenttoc">
-    <h id="sparkling_wines_and_prosecco" title="Sparking Wines and Prosecco…">Sparking Wines and Prosecco</h>
+    <h id="sekty" title="Sekty a Prosecco">Sekty a Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
-      <dt>Louis Perdrier Demi-Sec</dt>
-      <dd>Grown in France, variety Ugni Blanc.</dd>
-      <dd>Pale yellow sparkling wine with green tones, a delicious foam and lots of fine bubbles. Fresh fruity and flowery fragrance with hints of citrus fruits. A young wine with a gently sweet flavor and a well-balanced sparkling.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 240</span></span></dd>
+      <dt>Louis Perdier Demi Sec</dt>
+      <dd>Oblast Francie, Odrůda UgniBlanc.</dd>
+      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně s náznaky citrusového ovoce. Mladé víno jemně nasládlé chuti s vyváženou šumivostí.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>240 Kč</span></span>
+      </dd>
     </dl>
     <dl class="meal">
-      <dt>Louis Perdrier Brut</dt>
-      <dd>Grown in France, varieties Ugni Blanc, Chenin, Folle Blanche.</dd>
-      <dd>Pale yellow sparkling wine with greenish hints. With lots of fine bubbles. Fresh fine fragrance with a gentle flavor of yellow fruits. A stylish wine with a well-balanced flavor. To be savored on a festive occasion.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 240</span></span></dd>
+      <dt>Louis Perdier Brut</dt>
+      <dd>Oblast Francie, Odrůda Ugni Blanc, Chenin, Folle Blanche.</dd>
+      <dd>Sekt světle žluté barvy s náznaky dozelena. S množstvím jemných bublinek. Svěží jemná vůně s jemným aroma žlutého ovoce. Elegantní víno vybalancované chuti. K vychutnání pro slavnostní příležitosti.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>240 Kč</span></span>
+      </dd>
     </dl>
+
+<!--     <h id="prosecco" class="break" title="Prosecco">Prosecco</h> -->
+<!--     <desc>n/a</desc> -->
+<!--     <desc>Prosecco je šumivé víno, které se vyrábí z odrůdy Glera. Podobně jako oblast Champagne dává název šampaňskému, je i Prosecco charakteristické svou oblastí, ve které se pěstuje. Vinice se nacházejí na severu Itálie v regionech Veneto a Friuli Venezia Giulia.</desc> -->
+
     <dl class="meal">
       <dt>Bepin de Eto Millesimato, Conegliano Valdobbiadene Prosecco Superiore <a var="inputvar-term-docg">DOCG</a>, Extra Dry</dt>
-      <dd>Pale straw yellow color with greenish reflections. Delicate fragrance of freshly baked bread, complemented by notes of apples, pears and apricots. Ends on a fragrant note of roses and locust blossom. Very fine and velvety wine with a slightly sweet flavor, coupled harmoniously with a more acidic taste reminiscent of lime juice.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 600</span></span></dd>
+      <dd>Světle slámově žlutá barva se zelenkavými odlesky. Delikátní vůně čerstvě upečeného chleba, kterou doplňují tóny jablek, hrušek a meruněk. V závěru vůně růží a akátu. Velmi jemné a sametové víno s lehce sladkou chutí, která se harmonicky snoubí s kyselejší chutí připomínající limetovou šťávu.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>600 Kč</span></span>
+      </dd>
     </dl>
 
     <dl class="meal">
       <dt>Gancia Prosecco <a var="inputvar-term-doc">DOC</a>, Brut</dt>
-      <dd>Prosecco made from the Glera grape variety, pale yellow with greenish reflections. Fine, persistent sparkling. Intensive and continuing taste; fruity, quality, reminiscent of green apples and acacia blossoms. Sweet and fresh, pleasant flavor, extraordinarily fine and well-balanced, with a fruity finish.</dd>
-      <dd class="price multiple"><span><span>0.1 L</span><span>CZK 60</span></span> <span><span>0.75 L</span><span>CZK 350</span></span></dd>
+      <dd>Prosecco odrůdy hroznů Glera světle žluté barvy s nazelenalými odlesky. Jemné, vytrvalé perlení. Intenzivní a přetrvávající vůně; ovocná, kvalitní, připomínající zelené jablko a květy akácie. Sladká a svěží, příjemná chuť, mimořádně jemná a vyvážená, ovocné zakončení.</dd>
+      <dd class="price multiple">
+        <span><span>0,1 l</span><span>60 Kč</span></span>
+        <span><span>0,75 l</span><span>350 Kč</span></span>
+      </dd>
     </dl>
 
-    <h id="house_wine" class="break" title="House Wine…">House Wine</h>
+    <h id="rozlevana_vina" class="break" title="Rozlévaná vína">Rozlévaná vína</h>
     <desc>n/a</desc>
     <dl class="meal">
-      <dt>Zafrica – medium-dry white</dt>
-      <dd>Grown in Western Cape, South Africa.</dd>
-      <dd>A lighter straw yellow color with greenish notes. The aroma is medium-intensive with notes of pear compote. Jam with a gentle touch of dried herbs. Flavorful with a pleasantly balanced sugar and higher acidity offering notes of citrus fruits and pineapple.</dd>
-      <dd class="price"><span><span>0.2 L</span><span>CZK 58</span></span></dd>
+      <dt>Zafrica – polosuché bílé</dt>
+      <dd>Oblast Jižní Afrika, Western Cape.</dd>
+      <dd>Víno světlejší slámově žluté barvy s tóny do zelena. Aroma vína je středně intenzivní s tóny hruškového kompotu. Džem s lehkou stopou sušených bylin. V chuti příjemně vybalancovaný cukr s vyšší kyselinkou nabízející tóny citrusů a ananasu.</dd>
+      <dd class="price">
+        <span><span>0,2 l</span><span>58 Kč</span></span>
+      </dd>
     </dl>
     <dl class="meal">
-      <dt>Chardonnay <a var="inputvar-term-igp">IGP</a> – dry white</dt>
-      <dd>Grown in Languedoc, France.</dd>
-      <dd>Light white wine with a fragrance of white flowers and spices.</dd>
-      <dd class="price"><span><span>0.2 L</span><span>CZK 56</span></span></dd>
+      <dt>Chardonnay <a var="inputvar-term-igp">IGP</a> – suché bílé</dt>
+      <dd>Oblast Francie, Languedoc.</dd>
+      <dd>Lehké bílé vínobílé víno s vůní bílých květin a koření.</dd>
+      <dd class="price">
+        <span><span>0,2 l</span><span>56 Kč</span></span>
+      </dd>
     </dl>
     <dl class="meal">
-      <dt>BIG ZIN Rosé Primitivo 2016 – medium-dry rosé</dt>
-      <dd>Grown in Apulia, Italy.</dd>
-      <dd>A deep pink wine. The aroma is medium intensive, reminiscent of roses and strawberry jam. The taste features notes of cherries and strawberries with cream in the aftertaste.</dd>
-      <dd class="price"><span><span>0.2 L</span><span>CZK 56</span></span></dd>
+      <dt>BIG ZIN Rosé Primitivo 2016 – polosuché růžové</dt>
+      <dd>Oblast Itálie, Puglia</dd>
+      <dd>Víno sytě růžové barvy. Aroma vína je středně intenzivní připomínající růže a jahodový džem. V chuti vystupují tóny třešní a jahod se smetanou v dochuti.</dd>
+      <dd class="price">
+        <span><span>0,2 l</span><span>56 Kč</span></span>
+      </dd>
     </dl>
     <dl class="meal">
-      <dt>Syrah – dry red</dt>
-      <dd>Grown in Languedoc, France.</dd>
-      <dd>A purple red wine. A fresh, fruity flavor with notes of mint and blackberries and pleasant tannins.</dd>
-      <dd class="price"><span><span>0.2 L</span><span>CZK 56</span></span></dd>
+      <dt>Syrah – suché červené</dt>
+      <dd>Oblast Francie, Languedoc.</dd>
+      <dd>Víno purpurově rudé barvy. Svěží ovocná chuť s tóny máty a ostružin s příjemnou tříslovinou.</dd>
+      <dd class="price">
+        <span><span>0,2 l</span><span>56 Kč</span></span>
+      </dd>
     </dl>
     <dl class="meal">
-      <dt>Zafrica – medium-dry red</dt>
-      <dd>Grown in Western Cape, South Africa.</dd>
-      <dd>A ruby red wine. The aroma is dominated by black currants and blueberries. A well-balanced taste with notes of fresh fruits, gentle tannins and a pleasant sweetish finish.</dd>
-      <dd class="price"><span><span>0.2 L</span><span>CZK 58</span></span></dd>
+      <dt>Zafrica – polosuché červené</dt>
+      <dd>Oblast Jižní Afrika, Western Cape.</dd>
+      <dd>Víno rubínově červené barvy. Aroma dominuje černý rybíz a borůvky. Vybalancovaná chuť s tóny černého ovoce, jemnými taniny a příjemně nasládlým závěrem.</dd>
+      <dd class="price">
+        <span><span>0,2 l</span><span>58 Kč</span></span>
+      </dd>
     </dl>
 
-    <h id="white_wines" class="break" title="White Wines…">White Wines</h>
-    <desc>n/a</desc>
-
-    <dl class="meal">
-      <dt>Vinné sklepy Zapletal Müller Thurgau 2016 reserve wine – dry</dt>
-      <dd>Grown in Velké Bílovice, Moravia.</dd>
-      <dd>The wine is of a glittering golden color. The taste and fragrance combine white peach, pears and gentle notes of citrus fruits. A harmonic taste with fine residual sugar and a juicy acidity.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 230</span></span></dd>
-    </dl>
-
-    <dl class="meal">
-      <dt>Vinné sklepy Zapletal Rulandské šedé 2016 late harvest wine – dry</dt>
-      <dd>Grown in Velké Bílovice, Moravia.</dd>
-      <dd>The color is a deep yellow, the fragrance and flavor features notes of pear compote and a gentle buttery, even creamy, long-lasting aftertaste.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 340</span></span></dd>
-    </dl>
-
-    <dl class="meal">
-      <dt>Louis Dry Riesling 2016 – dry</dt>
-      <dd>Grown in Rheinhessen, Germany.</dd>
-      <dd>A light straw yellow wine. Delicate fragrance of white peaches, apricots and juicy pears. Impressive fullness on the palate with a long aftertaste.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 290</span></span></dd>
-    </dl>
-
-    <dl class="meal">
-      <dt>Endless River Sauvignon 2016 – dry</dt>
-      <dd>Grown in  Marlborough, New Zealand.</dd>
-      <dd>A light yellow wine. The fragrance features notes of tropical fruit and gooseberries. This Sauvignon Blanc has a fresh acidity and a bouquet of yellow summer fruits. The core has a noticeable minerality, supported by a strong fruity taste with herbal notes.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 280</span></span></dd>
-    </dl>
-
-    <dl class="meal">
-      <dt>Grillo IGT 2015 – dry</dt>
-      <dd>Grown in Noto, Sicily.</dd>
-      <dd>A straw yellow wine with golden tones. Intensive flowery fragrance mixed with notes of citrus fruits and yellow peaches, notes of grass and sweet almonds. A well-balanced, fresh and rich flavor.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 420</span></span></dd>
-    </dl>
-
-    <h id="red_wines" class="break" title="Red Wines…">Red Wines</h>
+    <h id="bila_vina" class="break" title="Bílá vína">Bílá vína</h>
     <desc>n/a</desc>
 
     <dl class="meal">
-      <dt>Vinné sklepy Zapletal Frankovka 2016 late harvest wine – dry</dt>
-      <dd>Grown in Velké Bílovice, Moravia.</dd>
-      <dd>This wine is a deep ruby color with violet reflections. A prominent fragrance of sour cherries in dark chocolate and plum butter. The taste takes denser notes of chocolate and coffee alongside the plum butter.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 280</span></span></dd>
+      <dt>Vinné sklepy Zapletal Müller Thurgau 2016 kabinet – suché</dt>
+      <dd>Oblast Morava, Velké Bílovice.</dd>
+      <dd>Víno má jiskrnou zlatavouz barvu. Ve vůni a chuti se snoubí bílá broskev, hrušky a jemné tóny citrusů Harmonická dochuť s jemným zbytkovým cukrem a šťavnatou kyselinkou.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>230 Kč</span></span>
+      </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Montenero Primitivo 2015 – dry</dt>
-      <dd>Grown in Apulia, Italy.</dd>
-      <dd>A wine with flavors of plums, aniseed, cinnamon and vanilla. Intensive taste of licorice, blackberries, dark chocolate and cherries. The palate will enjoy the pleasant acidity accompanied by vanilla notes.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 260</span></span></dd>
+      <dt>Vinné sklepy Zapletal Rulandské šedé 2016 pozdní sběr – suché</dt>
+      <dd>Oblast Morava, Velké Bílovice.</dd>
+      <dd>Barva je sytě žlutá, ve vůni a chuti nás toto víno zaujme tóny hruškového kompotu a jemnou máslovou, až smetanovou dlouhotrvající dochutí.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>340 Kč</span></span>
+      </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Lynx Petite Shiraz and Zinfandel 2015 – medium-dry</dt>
-      <dd>Grown in California, USA.</dd>
-      <dd>A ruby red wine. A red wine with intensive notes of overripe cherries, spices, vanilla and chocolate. Its flavor is softly velvety, juicily fruity, gently savory with ripe (warm) tannins and a long, smooth aftertaste.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 290</span></span></dd>
+      <dt>Louis Dry Riesling 2016 – suché</dt>
+      <dd>Oblast Německo, Rheinhessen.</dd>
+      <dd>Víno světle slámově žluté barvy. Delikátní vůně bílých broskví, meruněk a šťavnatých hrušek. Působivá plnost na patře s dlouhou dochutí.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>290 Kč</span></span>
+      </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Nero d’Avola IGT 2015 – dry</dt>
-      <dd>Grown in Noto, Sicily.</dd>
-      <dd>With a ruby red color, this wine overflows with the savory aroma of red berries with prominent fruity notes. The flavor is harmonious with a pleasant structure.</dd>
-      <dd class="price"><span><span>0.75 L</span><span>CZK 420</span></span></dd>
+      <dt>Endless River Sauvignon 2016 – suché</dt>
+      <dd>Oblast Nový Zéland, Marlborough.</dd>
+      <dd>Víno světle žluté barvy. Ve vůni tóny tropického ovoce a angreštu. Tento Sauvignon Blanc má svěží kyselinku a buket letního žlutého ovoce. V jádru chutná výrazná mineralita, podpořená pronikavou ovocnou chutí s tóny bylin.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>280 Kč</span></span>
+      </dd>
+    </dl>
+
+    <dl class="meal">
+      <dt>Grillo IGT 2015 – suché</dt>
+      <dd>Oblast Sicílie, Noto.</dd>
+      <dd>Víno slámově žluté barvy se zlatými odstíny. Intenzivní květová vůně smíšená s tóny citrusů a žlutých broskví, tóny trávy a sladkých mandlí. Vyvážená, svěží a bohatá chuť.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>420 Kč</span></span>
+      </dd>
+    </dl>
+
+    <h id="cervena_vina" class="break" title="Červená vína">Červená vína</h>
+    <desc>n/a</desc>
+
+    <dl class="meal">
+      <dt>Vinné sklepy Zapletal Frankovka pozdní sběr 2016 – suché</dt>
+      <dd>Oblast Morava, Velké Bílovice.</dd>
+      <dd>Barva tohoto vína je tmavě rubínová s fialovými odlesky. Výrazná vůně višní v hořké čokoládě a švestkových povidel. V chuti se k povidlům přidávají i hutnější tóny čokolády a kávy.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>280 Kč</span></span>
+      </dd>
+    </dl>
+
+    <dl class="meal">
+      <dt>Montenero Primitivo 2015 – suché</dt>
+      <dd>Oblast Itálie, Puglia.</dd>
+      <dd>Víno s aroma švestek, anýzu, skořice a vanilky. Intenzivní chuť lékořice, ostružin, tmavé čokolády a třešní. Na patře se projeví příjemná kyselinka doplněná vanilkovými tóny.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>260 Kč</span></span>
+      </dd>
+    </dl>
+
+    <dl class="meal">
+      <dt>Lynx Petite Shiraz a Zinfandel 2015 – polosuché</dt>
+      <dd>Oblast USA, Kalifornie.</dd>
+      <dd>Víno rubínové barvy. Červená víno s intenzivními tóny přezrálých třešní, koření, vanilky a čokolády. Jeho chuť je měkce sametová, šťavnatě ovocná, lehce pikantní se zralými (teplými) tříslovinami a dlouhou hladkou dochutí.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>290 Kč</span></span>
+      </dd>
+    </dl>
+
+    <dl class="meal">
+      <dt>Nero d´Avola IGT 2015 – suché</dt>
+      <dd>Oblast Sicílie, Noto</dd>
+      <dd>S rubínově červenou barvou je v tomto víně překypující pikantní aroma řervených bobulí s výraznými ovocnými tóny. Chuť je harmonická s příjemnou strukturou.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>420 Kč</span></span>
+      </dd>
     </dl>
   </section>
 </body>
